# strace

./: CMakeLists.txt  config.h  strace.c
